tests/invalid/for_dict_step_not_supported.wio
fn Entry() -> i32 {
    let values: Tree<i32, i32> = {< 1: 2, 3: 4 >};

    for key | value in values step 2 {
        return value;
    }

    return 0;
}
